# CS253

./: README.md  helloworldtest.cpp
HW0/: .swp  CMakeCache.txt  CMakeLists.txt  HW0  HW0.cc  HW0.tar  Makefile  cmake_install.cmake
HW1/: HW1.cc  HW1.tar  Makefile  haziqfarhan.txt
HW2/: CMakeCache.txt  CMakeLists.txt  HW2  HW2.cc  HW2.h  Makefile  cmake_install.cmake  from ssh.txt  haziq.txt  haziqfarhan.txt  hw2.tar  test  test.txt
HW3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  haziqfarhan.txt  hw3.cc  hw3.tar  lexan.cc  lexan.h  test.cc
HW4/: CMakeCache.txt  CMakeLists.txt  GameOfLife.cc  GameOfLife.h  Makefile  cmake_install.cmake  haziqfarhan.txt  hw4  hw4.tar
HW5/: CMakeCache.txt  CMakeLists.txt  Jail.cc  Jail.h  Lexan.cc  Lexan.h  Makefile  a.out  cmake_install.cmake  haziqfarhan.txt  hw5.tar  test  test.cc
HW6/: Board.cc  Board.h  CMakeCache.txt  CMakeLists.txt  Makefile  Rule.cc  Rule.h  cmake_install.cmake  haziqfarhan.txt  hw6.tar  test  test.cc  test2  test3
HW7/: Board.cc  Board.h  CMakeCache.txt  CMakeLists.txt  Jail.cc  Jail.h  Lexan.cc  Lexan.h  Makefile  Rule.cc  Rule.h  block3  cmake_install.cmake  haziqfarhan.txt  test.cc
Lab0/: results.txt
Lab1/: rn
Lab10/: data.txt  modify.cc  number.cc
Lab12/: Directory.cc  Directory.h  Makefile.txt  dir-object.cc  dir-simple.cc  dir.tar
Lab13/: algorithm.cc  results.cc
Lab14/: hash.tar  hasher.h  hset.h  hset_iter.h  main.cc
Lab15/: regex.cc
Lab3/: resolv.conf  results.cc
Lab4/: Makefile  foo.cc  foo.h  main.cc
Lab5/: Makefile  link.tar  ll.cc  ll.h  main  main.cc
Lab6/: bad.cc
Lab7/: a.out  exp1.cc  results.txt
Lab8/: Makefile  code  code.cc  code.cc.gcov  code.gcda  code.gcno  data.txt  leaptest  move.h.gcov  new_allocator.h.gcov
Lab9/: class.cc  errchk.cc  (+10 more)
(+2 files in other folders)
